[project]
name = "signalcat"
version = "1.4.0"
authors = [
    { name="Shinjo Park", email="peremen@gmail.com" },
]
description = "Signaling Collection and Analysis Tool"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
classifiers = [
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dependencies = [
    "pyusb>=1.0.2",
    "pyserial>=3.3",
    "bitstring>=3.1.7",
    "packaging>=19.0"
]
[project.optional-dependencies]
fastcrc = [
    "libscrc>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/fgsect/scat"
"Bug Tracker" = "https://github.com/fgsect/scat/issues"

[project.scripts]
scat = "scat.main:scat_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scat"]